# ChangeLog for net-misc/knemo
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/knemo/ChangeLog,v 1.26 2006/08/27 15:34:12 carlo Exp $

*knemo-0.4.5 (27 Aug 2006)

  27 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +knemo-0.4.5.ebuild:
  Version bump.

*knemo-0.4.4 (12 Aug 2006)

  12 Aug 2006; Stefan Schweizer <genstef@gentoo.org>
  -files/knemo-0.3.1-gcc41.patch, -files/knemo-0.3.1-linkquality.patch,
  -knemo-0.3.1-r1.ebuild, +knemo-0.4.4.ebuild:
  version bump, remove old

*knemo-0.4.2 (15 Jun 2006)

  15 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> -knemo-0.4.1.ebuild,
  +knemo-0.4.2.ebuild:
  Version bump with fix for divisions by zero.

*knemo-0.4.1 (12 Jun 2006)

  12 Jun 2006; Carsten Lohrke <carlo@gentoo.org> +knemo-0.4.1.ebuild:
  Version bump.

  08 Jun 2006; Jon Hood <squinky86@gentoo.org> knemo-0.4.0.ebuild:
  Stable on amd64, #135656.

  07 Jun 2006; Joshua Jackson <tsunam@gentoo.org> knemo-0.4.0.ebuild:
  Stable x86; bug #135656

  04 Apr 2006; Carsten Lohrke <carlo@gentoo.org> files/digest-knemo-0.4.0,
  Manifest:
  Forgot to recreate digest.

  03 Apr 2006; Carsten Lohrke <carlo@gentoo.org> knemo-0.4.0.ebuild:
  Upstream issued new tarball...

*knemo-0.4.0 (03 Apr 2006)

  03 Apr 2006; Carsten Lohrke <carlo@gentoo.org> +knemo-0.4.0.ebuild:
  Version bump.

  06 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/knemo-0.3.1-gcc41.patch, knemo-0.3.1-r1.ebuild:
  Add patch to fix building with GCC 4.1, thanks to Daniele Gaffuri in bug
  #125179 for submitting it.

  02 Sep 2005; Luis Medinas <metalgod@gentoo.org> knemo-0.3.1-r1.ebuild:
  Marked Stable on AMD64.

  13 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> knemo-0.3.1-r1.ebuild:
  Depend on sys-apps/net-tools just on Linux.

  29 Jun 2005; Carsten Lohrke <carlo@gentoo.org> knemo-0.3.1-r1.ebuild:
  stable on x86

*knemo-0.3.1-r1 (01 May 2005)

  01 May 2005; Carsten Lohrke <carlo@gentoo.org>