@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST 12956-knemo-0.4.2.tar.bz2 595322 RMD160 91c731219222789a70902d1216ce6b93c3011019 SHA1 27b16d8fe6634e5086b943923979eb25373d970d SHA256 67b802874ed5f544ab88cda82a1d900786b1263ec915141356b773af243773f2
 DIST 12956-knemo-0.4.4.tar.bz2 602876 RMD160 10a77e1e4907700e452c9969d48edb3b8981428b SHA1 1a64e14b8f84b7c2f7d11c6ac3a59caa0892f10c SHA256 907f71a5f61081e70fcc85cc7c859b4af4f8faf9d8a972d7e5a9f7ca5c688cef
 DIST 12956-knemo-0.4.5.tar.bz2 603267 RMD160 152a8ea60a829ee0c23ec1cd213e742e5a2dca31 SHA1 5caaa8d47488dbe819a20a4287781aa35542cc11 SHA256 b5f8307b6d51292a3d50dd79942186638f81570c9edcbcb523a90b7336eca464
@@ -14,14 +17,14 @@ EBUILD knemo-0.4.4.ebuild 767 RMD160 fff40dea9b719264b81f09edf71631054ac9e6fe SH
 MD5 621dd4100515afeb290c5bd6352ab39e knemo-0.4.4.ebuild 767
 RMD160 fff40dea9b719264b81f09edf71631054ac9e6fe knemo-0.4.4.ebuild 767
 SHA256 fe14b345c7d95f04510104a0a176d46026597e047f2bfee58bcb0905332994d4 knemo-0.4.4.ebuild 767
-EBUILD knemo-0.4.5.ebuild 765 RMD160 36db16677fc8a37f92765bd406aa198cee182e5d SHA1 e8ff398d360593597d2fd708871efd18bed7ec5b SHA256 bf5721be11f9ff3ab07dc9d8830780af3634cb3a5f57d4b3057b65919d799f73
-MD5 eefdb46b0fc895cbb34e9a73ee94c549 knemo-0.4.5.ebuild 765
-RMD160 36db16677fc8a37f92765bd406aa198cee182e5d knemo-0.4.5.ebuild 765
-SHA256 bf5721be11f9ff3ab07dc9d8830780af3634cb3a5f57d4b3057b65919d799f73 knemo-0.4.5.ebuild 765
-MISC ChangeLog 3556 RMD160 bdc2f903af0076897f509e815605d9ed765eef7f SHA1 98ba21d4a6aec0bb86446701f71414a5042f5b53 SHA256 bf93aff67a855586b2405150d9c8b6d3d359c4ee9337056331b59942bd54c156
-MD5 2801ea9c8ee75406d53a3772ce2b88bb ChangeLog 3556
-RMD160 bdc2f903af0076897f509e815605d9ed765eef7f ChangeLog 3556
-SHA256 bf93aff67a855586b2405150d9c8b6d3d359c4ee9337056331b59942bd54c156 ChangeLog 3556
+EBUILD knemo-0.4.5.ebuild 1004 RMD160 80fadb3683aa8bb0052d64821fb14437e2145c95 SHA1 4c8ace17fcebe8f426704ff101207f497ddda336 SHA256 8a70793f2f7af4ae73b428b5cc8c3aa5a7f9ab0a7f749de123ff5e40afb6d143
+MD5 94f6e37b270ce0abb4a450a5f22e04a1 knemo-0.4.5.ebuild 1004
+RMD160 80fadb3683aa8bb0052d64821fb14437e2145c95 knemo-0.4.5.ebuild 1004
+SHA256 8a70793f2f7af4ae73b428b5cc8c3aa5a7f9ab0a7f749de123ff5e40afb6d143 knemo-0.4.5.ebuild 1004
+MISC ChangeLog 3757 RMD160 b46298da9402966d5d882dcdbb2a2cd6d9bb1244 SHA1 c826786273f41c271ab45be49ab0ce5098c1dbfd SHA256 b7c62a10837dedfb18999eb16da2f85aba841c5879b764cb8a98dc2ab34693ae
+MD5 d30c0d88cff348bf19cd2e89cb2eb07a ChangeLog 3757
+RMD160 b46298da9402966d5d882dcdbb2a2cd6d9bb1244 ChangeLog 3757
+SHA256 b7c62a10837dedfb18999eb16da2f85aba841c5879b764cb8a98dc2ab34693ae ChangeLog 3757
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -38,3 +41,10 @@ SHA256 bc4f6da363467ebdaf7b692335775f3b8223405e9781905f153a06631884f7cc files/di
 MD5 a629efc734373c9e2856d5346327e63a files/digest-knemo-0.4.5 256
 RMD160 21dd02070545c6955fe74a5fbba50ab938422b47 files/digest-knemo-0.4.5 256
 SHA256 be2f3d6338ed7df584a16824c208d75784ebd92f694d41de66ecb22e3bbe96e7 files/digest-knemo-0.4.5 256
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFMBjlQVeVlgLp4x8RAl6oAJ4zeNrNTjb3uKIQjpRXO9Ec9IRwVgCghIeq
+A3RGB7WJsG+TasO2uzdn78M=
+=2E+G
+-----END PGP SIGNATURE-----
