@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/knemo
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/knemo/ChangeLog,v 1.26 2006/08/27 15:34:12 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/knemo/ChangeLog,v 1.27 2006/10/13 22:53:16 deathwing00 Exp $
+
+  13 Oct 2006; Ioannis Aslanidis <deathwing00@gentoo.org>
+  knemo-0.4.5.ebuild:
+  Fixed pkg_postinst message as reported in bug #151229. Thanks to
+  Wiktor Wandachowicz for reporting the issue.
 
 *knemo-0.4.5 (27 Aug 2006)
 
